fix bug of resizing window cause content to be cut off

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -306,9 +306,9 @@ hr.or
         
     .content
       &.pos-left
-        padding 50px 0 0 100px
+        padding 50px 15px 15px 100px
       &.pos-right
-        padding 50px 0 0 75px
+        padding 50px 15px 15px 70px
   
   .index-0
     display none
@@ -336,17 +336,20 @@ hr.or
     background transparent url(../images/index_s2_1.png) center top no-repeat
   
   .index-3>.md-container
-    height 330px
+    max-width none
     background transparent url(../images/index_s3_1.png) center top no-repeat
+    .bg-img
+      width 1000px // Trick
     
   .index-4>.md-container
     height 330px
     background transparent url(../images/index_s4_1.png) center top no-repeat
   
   .index-5>.md-container
-    height 330px
+    max-width none
     background transparent url(../images/index_s5_1.png) center top no-repeat
     .bg-img
+      width 1000px // Trick
       height 80%
     
 // Patients Page // -----------------------------------------------
