--- a/app/styles/smartphone.styl
+++ b/app/styles/smartphone.styl
@@ -36,12 +36,12 @@
         float none
         width auto
         
-        box-sizing(content-box) // IE fix
-        max-width 215px // IE fix
-        margin 0 auto
+        margin 0 0 0 50%
         &.pos-left
         &.pos-right
-          padding 10px 15px 15px 70px
+          padding 10px 15px 15px 15px
+          .trick
+            margin-left -95px
       
     .index-0
       display block
@@ -57,6 +57,7 @@
           display none
         .content
           max-width none
+          margin 0
           padding 15px
         
     .index-2>.md-container
